group 'ru.sberbank.bit.concurrency.kolpakov'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.8

applicationName = 'game-of-life'
mainClassName = 'ru.sberbank.bit.concurrency.kolpakov.GameOfLife'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile "org.slf4j:slf4j-api:1.7.7"
    compile "ch.qos.logback:logback-core:1.1.2"
    compile "ch.qos.logback:logback-classic:1.1.2"
}

test {
    maxHeapSize = "4096m"
    jvmArgs "-XX:MaxPermSize=256m"
}